force-app/main/default/objects/Lead/fields/SubExpertiseForDeDupe__c.field-meta.xml
<CustomField>
    <fullName>SubExpertiseForDeDupe__c</fullName>
    <label>SMEG (For DeDupe)</label>
    <type>TextArea</type>
</CustomField>