force-app/main/default/objects/Lead/fields/SubSector__c.field-meta.xml
<CustomField>
    <fullName>SubSector__c</fullName>
    <description>It contains the information of sub sector related to particular sector.</description>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SubSector</valueSetName>
    </valueSet>
</CustomField>