force-app/main/default/objects/Lead/fields/TentativeFee__c.field-meta.xml
<CustomField>
    <fullName>TentativeFee__c</fullName>
    <inlineHelpText>Information regarding new client from GT Website</inlineHelpText>
    <label>Tentative Fee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>