force-app/main/default/objects/Lead/fields/Total_Current_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Assets__c</fullName>
    <inlineHelpText>This is for Last FY</inlineHelpText>
    <label>Total Current Assets (INR)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>