force-app/main/default/objects/Lead/fields/Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt__c</fullName>
    <inlineHelpText>Provide a short summary about the professional services required, or any additional remarks regarding the client</inlineHelpText>
    <label>Total Debt</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>