force-app/main/default/objects/Lead/fields/Total_Diluted_Earning_Loss_per_Share__c.field-meta.xml
<CustomField>
    <fullName>Total_Diluted_Earning_Loss_per_Share__c</fullName>
    <inlineHelpText>This is for Last FY</inlineHelpText>
    <label>Total Diluted Earning/Loss per Share</label>
    <length>24</length>
    <type>Text</type>
</CustomField>