force-app/main/default/objects/Lead/fields/Total_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Liabilities__c</fullName>
    <inlineHelpText>Choose an Integrated Solution or Bespoke Solution</inlineHelpText>
    <label>Total Liabilities</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>