force-app/main/default/objects/Lead/fields/Total_No_of_employees__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_employees__c</fullName>
    <inlineHelpText>Name of the exchange where the company is listed</inlineHelpText>
    <label>Total No of employees</label>
    <length>24</length>
    <type>Text</type>
</CustomField>