force-app/main/default/objects/Lead/fields/WCGTStatus__c.field-meta.xml
<CustomField>
    <fullName>WCGTStatus__c</fullName>
    <inlineHelpText>Status Of WCGT 
0 is NSL Approved
1 is Client Accepted
2 is Client Not Accepted</inlineHelpText>
    <label>WCGTStatus</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>