force-app/main/default/objects/Lead/fields/Would_you_like_to_talk_to_an_expert__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_to_talk_to_an_expert__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Would you like to talk to an expert?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>