force-app/main/default/objects/Lead/validationRules/addError.validationRule-meta.xml
<ValidationRule>
    <fullName>addError</fullName>
    <active>false</active>
    <errorConditionFormula>IsTaskOpen__c =true</errorConditionFormula>
    <errorMessage>add Meeting before moving to next stage</errorMessage>
</ValidationRule>