force-app/main/default/objects/Lead/validationRules/Category_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Approved</fullName>
    <active>true</active>
    <description>IF Category  is Cold Then (status new) can not Change .</description>
    <errorConditionFormula>AND( ISPICKVAL(Category__c, &apos;Cold&apos;), ISCHANGED(Status),
NOT( ByPassValidation__c ))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You can not Change Status</errorMessage>
</ValidationRule>