force-app/main/default/objects/Lead/validationRules/Client_Name_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Name_Rule</fullName>
    <active>true</active>
    <description>Client Name Should Not be editable for New Client Owner Profile</description>
    <errorConditionFormula>AND
(
	NOT(ISNEW()),
	TEXT(LeadSource) != &quot;Manual&quot;,
	OwnerId = $User.Id,
	NSL__c != $User.Id,
	SectorCoordinator__c != $User.Id,
	ISCHANGED(Company)
)</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>You cannot change Client Name. Please contact the Sector Business Partner.</errorMessage>
</ValidationRule>