force-app/main/default/objects/Lead/validationRules/First_Name_required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(PRIORVALUE(Status),&quot;Internal / External Discussions&quot;) , NOT(ISPICKVAL(Status,&quot;Internal / External Discussions&quot; )) ,ISBLANK( FirstName),
NOT(ByPassValidation__c) )</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name Should be Mandatory</errorMessage>
</ValidationRule>