force-app/main/default/objects/Lead/validationRules/First_Name_Should_be_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Should_be_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( LeadSource ,&apos;Manual&apos;) ,OR(ISNULL(FirstName),ISBLANK(FirstName) ), NOT( ISPICKVAL(  Channel__c  ,&apos;Visiting card&apos; ) ) )</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name Should be Mandatory</errorMessage>
</ValidationRule>