force-app/main/default/objects/Lead/validationRules/IfCountryCodeIsIndiathenOnly10Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>IfCountryCodeIsIndiathenOnly10Digits</fullName>
    <active>false</active>
    <description>moble should be take only number</description>
    <errorConditionFormula>AND(
       OR(LEN(MobilePhone ) &gt;10,
LEN(MobilePhone) &lt; 10),
          ISPICKVAL( CountryCode__c , &quot;India (+91)&quot;) ,
NOT(ByPassValidation__c)
 )</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Mobile number should have 10 digits</errorMessage>
</ValidationRule>