force-app/main/default/objects/Lead/validationRules/Phone_field_should_take_only_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_field_should_take_only_number</fullName>
    <active>false</active>
    <description>phone field should be take only number</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( Phone )),
NOT(ISNUMBER( Phone )) 
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone number should be allow only number</errorMessage>
</ValidationRule>