force-app/main/default/objects/Lead/validationRules/RejectReasonFilledOnlyInNotAcceptCase.validationRule-meta.xml
<ValidationRule>
    <fullName>RejectReasonFilledOnlyInNotAcceptCase</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND(NOT(ISPICKVAL(Status, &apos;Client Take On&apos;)),
ISPICKVAL( CCApprovalStatus__c , &apos;&apos;),
NOT(ISPICKVAL( Reject_Reason__c , &apos;&apos;))),

AND(ISPICKVAL(Status, &apos;Client Take On&apos;),
ISPICKVAL(CCApprovalStatus__c, &apos;Approved&apos;),
NOT(ISPICKVAL( Reject_Reason__c , &apos;&apos;))
))</errorConditionFormula>
    <errorMessage>You cannot fill Reject Reason until New Client Status reached Not Accepted Client.</errorMessage>
</ValidationRule>