force-app/main/default/objects/Lead/validationRules/RejectRemarksMustIfRejectReasonOthers.validationRule-meta.xml
<ValidationRule>
    <fullName>RejectRemarksMustIfRejectReasonOthers</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(  Reject_Reason__c  , &apos;Lost client – other reasons&apos;),
ISBLANK( Reject_Remarks__c ) )</errorConditionFormula>
    <errorMessage>Reject Remarks are mandatory since the Reject Reason marked as &apos;Lost client – other reasons&apos;.</errorMessage>
</ValidationRule>