force-app/main/default/objects/Lead/validationRules/Remarks_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Remarks_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
LEN(Remark__c) =0,
 ISCHANGED(Status) ,
ISPICKVAL(Status, &apos;Client Take On&apos;),
NOT(ByPassValidation__c)
)</errorConditionFormula>
    <errorMessage>Please Fill Remark</errorMessage>
</ValidationRule>