force-app/main/default/objects/Lead/validationRules/Required_Field_For_Internal_External_Sta.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Field_For_Internal_External_Sta</fullName>
    <active>false</active>
    <errorConditionFormula>AND((ISPICKVAL(PRIORVALUE(Status), &apos;Internal / External Discussions&apos;)),
ISCHANGED(Status),
OR(ISBLANK(Expertise__c),
ISBLANK(SubExpertise__c )
))</errorConditionFormula>
    <errorMessage>Please fill Expertise,SMEG before moving further.</errorMessage>
</ValidationRule>