force-app/main/default/objects/Lead/validationRules/Required_Fields_For_Client_Connect_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_For_Client_Connect_Stage</fullName>
    <active>false</active>
    <errorConditionFormula>AND((ClientBackground__c=null),
(GrowthPotential__c=null),
( HowDidYouArriveAThisTentativeFee__c =null),
ISPICKVAL(PRIORVALUE(Status), &apos;Internal / External Discussions&apos;),
ISCHANGED(Status))</errorConditionFormula>
    <errorMessage>Please fill Client Background , Growth Potential ,Tentative fee , how did you arrive at this tentative fee before moving to the next  status.</errorMessage>
</ValidationRule>