force-app/main/default/objects/Lead/validationRules/Required_Fields_for_New_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_for_New_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Status,&apos;New&apos;)),
ISPICKVAL(Sector__c,&apos;&apos;),
NOT(ByPassValidation__c))</errorConditionFormula>
    <errorMessage>Please fill Sector before moving to the next status.</errorMessage>
</ValidationRule>