force-app/main/default/objects/Lead/validationRules/Sector_Cannot_be_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Sector_Cannot_be_Other</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
	NOT(ISNEW()),
	TEXT(Sector__c) = &quot;Others&quot;
)</errorConditionFormula>
    <errorDisplayField>Sector__c</errorDisplayField>
    <errorMessage>You cannot select Others for Sector.</errorMessage>
</ValidationRule>