force-app/main/default/objects/Lead/validationRules/SectorReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>SectorReadOnly</fullName>
    <active>true</active>
    <description>If NSL Approval Status is &apos;Approved&apos; then Sector cannot be changed.</description>
    <errorConditionFormula>ISPICKVAL(NSLApprovalStatus__c, &apos;Approved&apos;) &amp;&amp; ISCHANGED( Sector__c )</errorConditionFormula>
    <errorDisplayField>Sector__c</errorDisplayField>
    <errorMessage>Sector cannot be changed for NSL Approved Records.</errorMessage>
</ValidationRule>