force-app/main/default/objects/Lead/validationRules/Users_Contains_T1.validationRule-meta.xml
<ValidationRule>
    <fullName>Users_Contains_T1</fullName>
    <active>false</active>
    <errorConditionFormula>Owner:User.Designation__c &lt;&gt; &apos;T1&apos;</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>User must have T1 Designation</errorMessage>
</ValidationRule>