force-app/main/default/objects/Lead/validationRules/Validation_For_other_Sector.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_For_other_Sector</fullName>
    <active>true</active>
    <description>User can not select other sector on any stage in new client process .</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Status , &apos;New&apos;)),ISPICKVAL(Sector__c , &apos;Others&apos;))</errorConditionFormula>
    <errorMessage>Please select the relevant sector .</errorMessage>
</ValidationRule>