force-app/main/default/objects/Lead/validationRules/Validation_on_Converted_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Converted_Stage</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, &apos;NotAccept&apos;),
OR(ISPICKVAL(Status,&apos;New&apos;),
ISPICKVAL(Status,&apos;Internal / External Discussions&apos;),
ISPICKVAL(Status,&apos;Client Take-On PreWork&apos;),
ISPICKVAL(Status,&apos;Client Take On&apos;),
ISPICKVAL(Status,&apos;Accept Client&apos;)),
ISCHANGED(Status))</errorConditionFormula>
    <errorMessage>You can not go back if new client status is Not Accepted</errorMessage>
</ValidationRule>