force-app/main/default/objects/Lead/validationRules/ValidationForOpenTasks.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationForOpenTasks</fullName>
    <active>false</active>
    <errorConditionFormula>AND((ISPICKVAL(PRIORVALUE(Status), &apos;Client Take On&apos;)),
 IsTaskOpen__c  = True,
ISCHANGED(Status),
 ISPICKVAL( Status , &apos;Accept Client&apos;) 
)</errorConditionFormula>
    <errorMessage>There are still open Tasks for this New Client, Please complete all open tasks before moving further.</errorMessage>
</ValidationRule>