force-app/main/default/objects/Lead/validationRules/ValidationOnNSLApprovalStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationOnNSLApprovalStatus</fullName>
    <active>false</active>
    <errorConditionFormula>AND( OR(ISPICKVAL(  NSLApprovalStatus__c  , &apos;&apos;),ISPICKVAL(  NSLApprovalStatus__c , &apos;Rejected&apos;),
ISPICKVAL(  NSLApprovalStatus__c , &apos;Pending&apos;)) ,
ISCHANGED(Status),
ISPICKVAL(Status, &apos;Client Take-On PreWork&apos;)
)</errorConditionFormula>
    <errorMessage>New Client Status cannot be marked as &apos;Client Take-On PreWork&apos; until NSL Approval Status not &apos;Approved&apos;.</errorMessage>
</ValidationRule>