force-app/main/default/objects/Lead/listViews/ClientCouncilTeam_Lead.listView-meta.xml
<ListView>
    <fullName>ClientCouncilTeam_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Client Take On</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>notEqual</operation>
        <value>Cold</value>
    </filters>
    <label>Client Council Team</label>
    <queue>ClientCouncilTeam</queue>
    <sharedTo>
        <group>Client_Council_Approval</group>
    </sharedTo>
</ListView>