force-app/main/default/objects/Lead/listViews/EnquiryAssignmentTeam_Lead.listView-meta.xml
<ListView>
    <fullName>EnquiryAssignmentTeam_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>notEqual</operation>
        <value>Cold</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Not Accepted Client</value>
    </filters>
    <label>Outbound Team</label>
    <queue>SectorAssignmentTeam</queue>
    <sharedTo>
        <group>Sector_Assignment_Team</group>
    </sharedTo>
</ListView>