force-app/main/default/objects/Lead/listViews/Markets_Ecosystems.listView-meta.xml
<ListView>
    <fullName>Markets_Ecosystems</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Client Take-On PreWork,Client Take On</value>
    </filters>
    <label>Markets Ecosystems</label>
    <sharedTo>
        <group>C_M_Team</group>
    </sharedTo>
</ListView>