force-app/main/default/objects/Lead/listViews/NSL_List_View.listView-meta.xml
<ListView>
    <fullName>NSL_List_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>NSL List View</label>
    <sharedTo>
        <group>NSL</group>
    </sharedTo>
</ListView>