force-app/main/default/objects/Lead/listViews/Sector_Business_Partner.listView-meta.xml
<ListView>
    <fullName>Sector_Business_Partner</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Sector Business Partner</label>
    <sharedTo>
        <group>Sector_Business_Partner</group>
    </sharedTo>
</ListView>