force-app/main/default/objects/Lead/listViews/Visiting_Card.listView-meta.xml
<ListView>
    <fullName>Visiting_Card</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Cold</value>
    </filters>
    <label>Visiting Card</label>
</ListView>